--- a/.github/workflows/crawling.yml
+++ b/.github/workflows/crawling.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Run SSI Crawling
         uses: addnab/docker-run-action@v3
         with:
