--- a/.github/workflows/crawling.yml
+++ b/.github/workflows/crawling.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Run SSI Crawling
         uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/cage1016/ssi-crawling:0.2.3
+          image: ghcr.io/cage1016/ssi-crawling:latest
           options: >
             --user root
             --env NUM_WORKERS=20
