--- a/.github/workflows/crawling.yml
+++ b/.github/workflows/crawling.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   product-life-cycle-dates:
     name: Update SSI Product life cycle dates
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
